--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Homework222</string>
     <string name="settingsMn">Настройки</string>
     <string name="notesMn">Записная книжка</string>
+    <string name="btnSave">Сохранить</string>
 </resources>
