есть проблемы с вылетами

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="settingsMn">Настройки</string>
     <string name="notesMn">Записная книжка</string>
     <string name="btnSave">Сохранить</string>
+    <string name="bthEdiSet">Изменить настройки</string>
+    <string name="btnSaveSet">Сохранить настройки</string>
 </resources>
